Fix icon spacing on modal

--- a/packages/web-components/src/components/va-modal/va-modal.scss
+++ b/packages/web-components/src/components/va-modal/va-modal.scss
@@ -59,6 +59,8 @@
 .va-modal-alert__icon {
   color: var(--vads-color-base-darker);
   padding-top: 1.25rem;
+  position: relative;
+  top: 0.25rem;
 }
 
 :host([status='continue']) .usa-modal {
